--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
   
+  
+  
   <dependencies>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -52,5 +54,12 @@
   </dependencies>
   <build>
     <finalName>daily_report_system</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+        </plugin>
+    </plugins>
   </build>
 </project>
